--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -62,8 +62,11 @@
         <a mat-list-item [routerLink]="['/distribuidores/listacfdis/']" routerLinkActive="active-list-item"><span
             class="font_side">Descargar CFDIs</span></a>
 
+        <!--
+        <a mat-list-item [routerLink]="['/distribuidores/guias2025/']" routerLinkActive="active-list-item"><span
+            class="font_side">Consulta de Logística</span></a>
+        -->
 
-        <!-- <a mat-list-item [routerLink]="['/distribuidores/guias/']" routerLinkActive="active-list-item"><span class="font_side">Consulta guías</span></a> -->
         <!-- <a mat-list-item [routerLink]="['/distribuidores/ordnretorno/']" routerLinkActive="active-list-item"><span class="font_side">Ordenes de Retorno</span></a> -->
         <!-- <a mat-list-item [routerLink]="['/catalogointeractivo/']" routerLinkActive="active-list-item"><span
             class="font_side_ic">Catálogo interactivo </span></a> -->
@@ -104,6 +107,12 @@
             class="font_side">Descargar CFDIs</span></a>
         <a mat-list-item [routerLink]="['/asesores/consultaexistencias/']" routerLinkActive="active-list-item"><span
             class="font_side">Consulta de Existencias</span></a>
+        <!--
+        <a mat-list-item [routerLink]="['/asesores/guias/']" routerLinkActive="active-list-item"><span
+            class="font_side">Consulta de guías</span></a>
+            -->
+        <a mat-list-item [routerLink]="['/asesores/guias2025/']" routerLinkActive="active-list-item"><span
+            class="font_side">Consulta de Logística</span></a>
 
         <!--
         <a mat-list-item [routerLink]="['/asesores/testdr2/']" routerLinkActive="active-list-item"><span
@@ -111,8 +120,6 @@
         -->
 
         <!--
-        <a mat-list-item [routerLink]="['/asesores/guias/']" routerLinkActive="active-list-item"><span
-            class="font_side">Consulta de guías</span></a>
         <a mat-list-item [routerLink]="['/asesores/ordnretorno/']" routerLinkActive="active-list-item"><span
             class="font_side">Ordenes de Retorno</span></a>        
         <a mat-list-item [routerLink]="['/catalogointeractivo/']" routerLinkActive="active-list-item"><span
