--- a/src/app/components/guias2025/guias2025.component.html
+++ b/src/app/components/guias2025/guias2025.component.html
@@ -61,10 +61,10 @@
         <div class="form-row">
           <div class="form-group col-md-3">
             <label class="CamposFonelli">Tipo documento</label>
-            <select class="form-select" name="idDocTipo" #nombre="ngModel" [(ngModel)]="oFiltros.DocTipoBuscar">
+            <select class="form-select" name="idDocTipo" #nombre="ngModel" [(ngModel)]="oFiltros.DocTipoBuscar"
+              (ngModelChange)="CambiaTipoDocumento($event)">
               <option value="{{tipo}}" *ngFor="let tipo of arrDocTipos">{{tipo}}</option>
             </select>
-
           </div>
           <div class="form-group col-md-1">
             <label class="CamposFonelli">Serie</label>
@@ -73,8 +73,8 @@
           </div>
           <div class="form-group col-md-2">
             <label class="CamposFonelli">Documento</label>
-            <input type="text" id="idDocFolio" class="form-control" name="idDocFolio" #nombre="ngModel"
-              [(ngModel)]="oFiltros.DocFolioBuscar" />
+            <input type="text" id="idDocFolio" class="form-control" name="idDocFolio" #idDocFolio="ngModel"
+              [(ngModel)]="oFiltros.DocFolioBuscar" (input)="ActualizarFechaDesde()" />
           </div>
         </div>
 
@@ -82,14 +82,14 @@
         <div class="form-row">
           <div class="form-group col-md-3">
             <label class="CamposFonelli" for="">Pedido</label>
-            <input type="text" id="idPedidoFiltro" class="form-control" name="idPedidoFiltro" #nombre="ngModel"
-              [(ngModel)]="oFiltros.PedidoBuscar" />
+            <input type="text" id="idPedidoFiltro" class="form-control" name="idPedidoFiltro" #idPedidoFiltro="ngModel"
+              [(ngModel)]="oFiltros.PedidoBuscar" (input)="ActualizarFechaDesde()" />
           </div>
           <!------------------ Orden de Compra ---------->
           <div class="form-group col-md-3">
             <label class="CamposFonelli" for="">Orden de Compra</label>
-            <input type="text" id="idOrdCompFiltro" class="form-control" name="idOrdCompFiltro" #nombre="ngModel"
-              [(ngModel)]="oFiltros.OrdCompBuscar" />
+            <input type="text" id="idOrdCompFiltro" class="form-control" name="idOrdCompFiltro"
+              #idOrdCompFiltro="ngModel" [(ngModel)]="oFiltros.OrdCompBuscar" (input)="ActualizarFechaDesde()" />
           </div>
         </div>
 
@@ -97,8 +97,8 @@
         <div class="form-row">
           <div class="form-group col-md-3">
             <label class="CamposFonelli" for="">Paquete</label>
-            <input type="text" id="idPaqueteFiltro" class="form-control" name="idPaqueteFiltro" #nombre="ngModel"
-              [(ngModel)]="oFiltros.PaqueteBuscar" />
+            <input type="text" id="idPaqueteFiltro" class="form-control" name="idPaqueteFiltro"
+              #idPaqueteFiltro="ngModel" [(ngModel)]="oFiltros.PaqueteBuscar" (input)="ActualizarFechaDesde()" />
           </div>
           <!-------------------- Carrier ------------------>
           <div class="form-group col-md-3">
@@ -112,7 +112,7 @@
           <!--------------- Fecha Desde ------------------>
           <div class="form-group col-md-3">
             <label class="CamposFonelli">Fecha Desde</label>
-            <input type="date" id="idFechaDesde" class="form-control" name="idFechaDesde" #nombre="ngModel"
+            <input type="date" id="idFechaDesde" class="form-control" name="idFechaDesde" #idFechaDesde="ngModel"
               [(ngModel)]="oFiltros.FechaDesdeBuscar" required />
           </div>
 
@@ -120,7 +120,7 @@
           <div class="form-group col-auto">
             <label class="CamposFonelli">...</label>
             <div class="form-check" style="text-align: center;">
-              <input class="form-check-input" type="checkbox" id="idDocumSinGuia" #nombre="ngModel"
+              <input class="form-check-input" type="checkbox" id="idDocumSinGuia" #idDocumSinGuia="ngModel"
                 [(ngModel)]="oFiltros.DocumSinGuia" />
               <label for="idDocumSinGuia">Mostrar Documentos sin Guia</label>
             </div>
