--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -112,12 +112,15 @@
         <!--
         <a mat-list-item [routerLink]="['/asesores/guias/']" routerLinkActive="active-list-item"><span
             class="font_side">Consulta de guías</span></a>
-            -->
+          -->
         <a mat-list-item [routerLink]="['/asesores/guias2025/']" routerLinkActive="active-list-item"><span
             class="font_side">Consulta de Logística</span></a>
 
         <a mat-list-item [routerLink]="['/asesores/ordnretorno/']" routerLinkActive="active-list-item"><span
             class="font_side">Ordenes de Retorno</span></a>
+
+        <a mat-list-item [routerLink]="['/asesores/cotizacion/']" routerLinkActive="active-list-item"><span
+            class="font_side">Cotización de Ventas</span></a>
 
         <!--
         <a mat-list-item [routerLink]="['/asesores/testdr2/']" routerLinkActive="active-list-item"><span
