--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -69,6 +69,11 @@
 
         <!-- <a mat-list-item [routerLink]="['/distribuidores/ordnretorno/']" routerLinkActive="active-list-item"><span class="font_side">Ordenes de Retorno</span></a> -->
 
+        <!--
+        <a mat-list-item [routerLink]="['/distribuidores/cotizacion/']" routerLinkActive="active-list-item"><span
+            class="font_side">Cotización de Ventas</span></a>
+        -->
+
         <!-- <a mat-list-item [routerLink]="['/catalogointeractivo/']" routerLinkActive="active-list-item"><span
             class="font_side_ic">Catálogo interactivo </span></a> -->
 
