--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -74,6 +74,11 @@
             class="font_side">Cotización de Ventas</span></a>
         -->
 
+        <!--
+        <a mat-list-item [routerLink]="['/distribuidores/articulosreporte/']" routerLinkActive="active-list-item"><span
+            class="font_side">Catálogo de Artículos</span></a>
+        -->
+
         <!-- <a mat-list-item [routerLink]="['/catalogointeractivo/']" routerLinkActive="active-list-item"><span
             class="font_side_ic">Catálogo interactivo </span></a> -->
 
@@ -126,6 +131,9 @@
 
         <a mat-list-item [routerLink]="['/asesores/cotizacion/']" routerLinkActive="active-list-item"><span
             class="font_side">Cotización de Ventas</span></a>
+
+        <a mat-list-item [routerLink]="['/asesores/articulosreporte/']" routerLinkActive="active-list-item"><span
+            class="font_side">Catálogo de Artículos</span></a>
 
         <!--
         <a mat-list-item [routerLink]="['/asesores/testdr2/']" routerLinkActive="active-list-item"><span
