--- a/src/app/components/articulos-consulta/articulos-consulta.component.html
+++ b/src/app/components/articulos-consulta/articulos-consulta.component.html
@@ -15,8 +15,19 @@
 
       <!--------------------------- Formulario para indicar Criterios de Filtro ----------------------->
       <form>
-        <!------------------ Código de artículo --------------------->
 
+        <!--<div class="form-row mb-2">-->
+        <div class="form-row mb-2">
+          <div class="col-md-7">
+            <p class="CamposFonelli" style="color:black">Encuentra la línea y modelo correcto en nuestro
+              catálogo. <br>
+              Si no conoces el código exacto, tecleando solo la porción que recuerdes y aparecerán los modelos
+              relacionados con tu búsqueda.</p>
+          </div>
+
+        </div>
+
+        <!------------------ Código de artículo --------------------->
         <div class="form-row mb-2">
           <div class="form-group col-md-3">
             <label for="ItemCode" class="CamposFonelli">Buscar modelo</label>
