--- a/src/app/components/consultaexistencias/consultaexistencias.component.html
+++ b/src/app/components/consultaexistencias/consultaexistencias.component.html
@@ -11,7 +11,8 @@
 <div #collapse="ngbCollapse" class="container float-left" [(ngbCollapse)]="isCollapsed">
   <div class="card">
     <div class="card-body">
-      <h4 class="card-title">Consulta de Existencias</h4>
+      <!-- <h4 class="card-title">Consulta de Existencias</h4> -->
+      <div class="card-title h3 fw-bold mb-4" style="color: #24a4cc;">Consulta de Existencias</div>
       <!-- Formulario para indicar Criterios de Filtro-->
       <form>
         <!-- Oficinas -->
