--- a/src/app/components/cotizacion/cotizacion.component.html
+++ b/src/app/components/cotizacion/cotizacion.component.html
@@ -3,7 +3,8 @@
 
     <div class="card-body">
 
-      <div class="card-title mb-2 h3">Propuesta Comercial (Cotización)</div>
+      <!-- <div class="card-title mb-2 h3">Propuesta Comercial (Cotización)</div> -->
+      <div class="card-title h3 fw-bold mb-4" style="color: #24a4cc;">Propuesta Comercial (Cotización)</div>
 
       <form [formGroup]="cotizacForm">
 
