--- a/src/app/components/listacfdis/listacfdis.component.html
+++ b/src/app/components/listacfdis/listacfdis.component.html
@@ -12,7 +12,8 @@
 <div #collapse="ngbCollapse" class="container float-left" [(ngbCollapse)]="isCollapsed">
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title">Descarga de CFDIs</h3>
+      <!-- <h3 class="card-title">Descarga de CFDIs</h3> -->
+      <div class="card-title h3 fw-bold mb-4" style="color: #24a4cc;">Descarga de CFDIs</div>
       <!-- General Form Elements -->
       <form>
         <div class="form-row">
