--- a/src/app/components/pedclte-lista/pedclte-lista.component.html
+++ b/src/app/components/pedclte-lista/pedclte-lista.component.html
@@ -12,7 +12,8 @@
 <div #collapse="ngbCollapse" class="container float-left" [(ngbCollapse)]="isCollapsed">
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title">Consulta de Pedidos</h3>
+      <!-- <h3 class="card-title">Consulta de Pedidos</h3> -->
+      <div class="card-title h3 fw-bold mb-4" style="color: #24a4cc;">Consulta de Pedidos</div>
       <!-- General Form Elements -->
       <form>
         <!-- Codigo de Cliente -->
