--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -10,7 +10,8 @@
 <div class="container float-left" #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title">Relación de Pedidos</h3>
+      <!-- <h3 class="card-title">Relación de Pedidos</h3> -->
+      <div class="card-title h3 fw-bold mb-4" style="color: #24a4cc;">Relación de Pedidos</div>
 
       <!-- General Form Elements -->
       <form>
