--- a/src/app/components/ventasarticulo/ventasarticulo.component.html
+++ b/src/app/components/ventasarticulo/ventasarticulo.component.html
@@ -10,7 +10,8 @@
 <div #collapse="ngbCollapse" class="container float-left" [(ngbCollapse)]="isCollapsed">
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title">Ventas por artículo</h3>
+      <!-- <h3 class="card-title">Ventas por artículo</h3> -->
+      <div class="card-title h3 fw-bold mb-4" style="color: #24a4cc;">Ventas por Artículo</div>
 
       <!-- General Form Elements -->
       <form class="table-responsive">
