--- a/src/app/components/articulos-consulta/articulos-consulta.component.html
+++ b/src/app/components/articulos-consulta/articulos-consulta.component.html
@@ -21,7 +21,7 @@
           <div class="col-md-7">
             <p class="CamposFonelli" style="color:black">Encuentra la línea y modelo correcto en nuestro
               catálogo. <br>
-              Si no conoces el código exacto, tecleando solo la porción que recuerdes y aparecerán los modelos
+              Si no conoces el código exacto, teclea solo la porción que recuerdes y aparecerán los modelos
               relacionados con tu búsqueda.</p>
           </div>
 
