--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -107,6 +107,8 @@
                   class="font_side">Consulta de Logística</span></a>
               <a mat-list-item [routerLink]="['/asesores/ordnretorno/']" routerLinkActive="active-list-item"><span
                   class="font_side">Ordenes de Retorno</span></a>
+              <a mat-list-item [routerLink]="['/asesores/prepedidos-repo/']" routerLinkActive="active-list-item"><span
+                  class="font_side">Reporte Prepedidos</span></a>
             </div>
           </div>
           <!-- Grupo Ventas -->
@@ -209,6 +211,12 @@
                 routerLinkActive="active-list-item"><span class="font_side">Consulta de pedidos</span></a>
               <a mat-list-item [routerLink]="['/distribuidores/relacionpedidos/']"
                 routerLinkActive="active-list-item"><span class="font_side">Relación de pedidos</span></a>
+
+              <!--
+              <a mat-list-item [routerLink]="['/distribuidores/prepedidos-repo/']"
+                routerLinkActive="active-list-item"><span class="font_side">Reporte Prepedidos</span></a>
+              -->
+
             </div>
           </div>
           <!-- Grupo Ventas -->
